// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyzePlaceholders commentPlaceholder 1`] = `
Array [
  Object {
    "position": Object {
      "end": 158,
      "start": 134,
    },
    "raw": "{{ # This is a comment }}",
    "type": "comment",
    "value": "This is a comment",
  },
]
`;

exports[`analyzePlaceholders contentPlaceholder - image (width) 1`] = `
Array [
  Object {
    "input": Object {
      "raw": "catUrl",
      "value": "http://example.cat",
    },
    "output": Object {
      "height": undefined,
      "url": "http://example.cat",
      "width": 150,
    },
    "pipes": Array [
      Object {
        "output": Object {
          "height": undefined,
          "url": "http://example.cat",
          "width": 150,
        },
        "raw": "image(150)",
      },
    ],
    "position": Object {
      "end": 166,
      "start": 134,
    },
    "raw": "{{ catUrl | image(150) }}",
    "type": "content",
  },
]
`;

exports[`analyzePlaceholders contentPlaceholder - image (with, height) 1`] = `
Array [
  Object {
    "input": Object {
      "raw": "catUrl",
      "value": "http://example.cat",
    },
    "output": Object {
      "height": 80,
      "url": "http://example.cat",
      "width": 150,
    },
    "pipes": Array [
      Object {
        "output": Object {
          "height": 80,
          "url": "http://example.cat",
          "width": 150,
        },
        "raw": "image(150, 80)",
      },
    ],
    "position": Object {
      "end": 166,
      "start": 134,
    },
    "raw": "{{ catUrl | image(150, 80) }}",
    "type": "content",
  },
]
`;

exports[`analyzePlaceholders contentPlaceholder - image 1`] = `
Array [
  Object {
    "input": Object {
      "raw": "catUrl",
      "value": "http://example.cat",
    },
    "output": Object {
      "height": undefined,
      "url": "http://example.cat",
      "width": undefined,
    },
    "pipes": Array [
      Object {
        "output": Object {
          "height": undefined,
          "url": "http://example.cat",
          "width": undefined,
        },
        "raw": "image",
      },
    ],
    "position": Object {
      "end": 166,
      "start": 134,
    },
    "raw": "{{ catUrl | image }}",
    "type": "content",
  },
]
`;

exports[`analyzePlaceholders contentPlaceholder - text 1`] = `
Array [
  Object {
    "input": Object {
      "raw": "user.name.first",
      "value": "Thibaud",
    },
    "output": "thibaud",
    "pipes": Array [
      Object {
        "output": "thibaud",
        "raw": "lowercase",
      },
    ],
    "position": Object {
      "end": 166,
      "start": 134,
    },
    "raw": "{{ user.name.first | lowercase }}",
    "type": "content",
  },
]
`;

exports[`analyzePlaceholders unknownPlaceholder - reserved symbol 1`] = `
Array [
  Object {
    "position": Object {
      "end": 158,
      "start": 134,
    },
    "raw": "{{ % reserved symbol }}",
  },
]
`;

exports[`buildUpdates commentPlaceholder 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ # This is a comment }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - image (width) 1`] = `
Array [
  Object {
    "insertInlineImage": Object {
      "location": Object {
        "index": 42,
        "segmentId": "",
      },
      "objectSize": Object {
        "height": undefined,
        "width": Object {
          "magnitude": 150,
          "unit": "PT",
        },
      },
      "uri": "http://example.cat",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ catUrl | image(150) }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - image (width, height) 1`] = `
Array [
  Object {
    "insertInlineImage": Object {
      "location": Object {
        "index": 42,
        "segmentId": "",
      },
      "objectSize": Object {
        "height": Object {
          "magnitude": 180,
          "unit": "PT",
        },
        "width": Object {
          "magnitude": 150,
          "unit": "PT",
        },
      },
      "uri": "http://example.cat",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ catUrl | image(150, 80) }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - image 1`] = `
Array [
  Object {
    "insertInlineImage": Object {
      "location": Object {
        "index": 42,
        "segmentId": "",
      },
      "objectSize": Object {
        "height": undefined,
        "width": undefined,
      },
      "uri": "http://example.cat",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ catUrl | image }}",
      },
      "replaceText": "",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - text (number) 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ accounts[0].money }}",
      },
      "replaceText": "1500",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - text 1`] = `
Array [
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ user.name.first }}",
      },
      "replaceText": "Thibaud",
    },
  },
]
`;

exports[`buildUpdates contentPlaceholder - unknown 1`] = `Array []`;

exports[`buildUpdates unknownPlaceholder 1`] = `Array []`;

exports[`findPlaceholders multiple paragraphs with multiple placeholders 1`] = `
Array [
  Object {
    "position": Object {
      "end": 21,
      "start": 6,
    },
    "raw": "{{ user.name }}",
  },
  Object {
    "position": Object {
      "end": 64,
      "start": 37,
    },
    "raw": "{{movie.title | uppercase}}",
  },
  Object {
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{ movie.rating }}",
  },
]
`;

exports[`interpolate full document 1`] = `
Array [
  Object {
    "input": Object {
      "raw": "user.name",
      "value": "Thibaud",
    },
    "output": "Thibaud",
    "pipes": Array [],
    "position": Object {
      "end": 21,
      "start": 6,
    },
    "raw": "{{ user.name }}",
    "type": "content",
  },
  Object {
    "input": Object {
      "raw": "movie.title",
      "value": "Lost in Translation",
    },
    "output": "LOST IN TRANSLATION",
    "pipes": Array [
      Object {
        "output": "LOST IN TRANSLATION",
        "raw": "uppercase",
      },
    ],
    "position": Object {
      "end": 64,
      "start": 37,
    },
    "raw": "{{movie.title | uppercase}}",
    "type": "content",
  },
  Object {
    "input": Object {
      "raw": "movie.rating",
      "value": 5,
    },
    "output": 5,
    "pipes": Array [],
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{ movie.rating }}",
    "type": "content",
  },
  Object {
    "input": Object {
      "raw": "movie.poster",
      "value": "http://example.img",
    },
    "output": Object {
      "height": undefined,
      "url": "http://example.img",
      "width": undefined,
    },
    "pipes": Array [
      Object {
        "output": Object {
          "height": undefined,
          "url": "http://example.img",
          "width": undefined,
        },
        "raw": "image",
      },
    ],
    "position": Object {
      "end": 150,
      "start": 124,
    },
    "raw": "{{ movie.poster | image }}",
    "type": "content",
  },
]
`;

exports[`interpolate full document 2`] = `
Array [
  Object {
    "insertInlineImage": Object {
      "location": Object {
        "index": 124,
        "segmentId": "",
      },
      "objectSize": Object {
        "height": undefined,
        "width": undefined,
      },
      "uri": "http://example.img",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ user.name }}",
      },
      "replaceText": "Thibaud",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{movie.title | uppercase}}",
      },
      "replaceText": "LOST IN TRANSLATION",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ movie.rating }}",
      },
      "replaceText": "5",
    },
  },
  Object {
    "replaceAllText": Object {
      "containsText": Object {
        "matchCase": true,
        "text": "{{ movie.poster | image }}",
      },
      "replaceText": "",
    },
  },
]
`;
